--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsonapi-serializer",
+  "name": "@intellihr/jsonapi-serializer",
   "version": "3.6.3",
   "description": "A Node.js framework agnostic library for serializing your data to JSON API",
   "main": "index.js",
